@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Updated partition code.
+
   16 Mar 2005; Preston Cody <codeman@gentoo.org>
   Fixing more bugs.  added dns server support.
 
